dark mode implementation and bug_fix

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   width: 100%;
   height: 100%;
   background-color: rgb(236, 236, 236);
+  transition: background-color 0.4s ease;
+}
+.App *{
+  transition: background-color 0.4s ease, width 1s ease;
 }
 .container_content{
   padding: 3vh 15vw;
@@ -19,9 +23,48 @@
 .header_element{
   text-align: center;
 }
-.titulo_container{
+.header_title_theme{
   display: block;
   margin-bottom: 20px;
+}
+.titulo_theme_container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+select{
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+h1{
+  margin: 0;
+  max-width: 70%;
+  text-align: center;
+}
+.theme_icons{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #007bff;
+  color: #ffffff; 
+  border: none;
+  width: 70px;
+  height: 35px;
+  padding: 10px;
+  border-radius: 100px;
+  cursor: pointer;
+}
+.seletor{
+  position: absolute;
+  color: rgb(231, 231, 231);
+  width: 30px;
+  height: 30px;
+  right: 4px;
+  border-radius: 50%;
+  border: 1px solid black;
+  transition: transform 1s ease;
 }
 .descricao{
   font-size: 1.2em;
@@ -104,6 +147,7 @@ hr{
   font-size: 1.2em;
   color: gray;
 }
+/* */
 .senha_tamanho_container{
   width: 100%;
 }
@@ -136,6 +180,7 @@ hr{
 {
   border: 1px solid rgb(163, 163, 163);
 }
+  /* */
 .senha_caracteres_container{
   display: flex;
   margin-inline: 20px;
